# ariel-wasm-runtime-comparisons

./: .gitignore  .gitmodules  Cargo.toml  README.md  input.cwasm  input.wasm  laze-project.yml  precompile_higher.rs
benchmark-results/: coremark-pico2.txt  wasm-interpreter-pico2.txt  wasmi-pico2.txt  wasmtime-no-simd-pico2.txt  wasmtime-pico2.txt
benchmarks/coremark/: coremark-minimal.cwasm
benchmarks/embench-1.0/: aha-mont64.cwasm  aha-mont64.wasm  crc32.cwasm  crc32.wasm  cubic.cwasm  cubic.wasm  edn.cwasm  edn.wasm  huffbench.cwasm  huffbench.wasm  matmult-int.cwasm  matmult-int.wasm  minver.cwasm  minver.wasm  nbody.cwasm  nbody.wasm  neetle-aes.cwasm  neetle-aes.wasm  neetle-sha256.cwasm  neetle-sha256.wasm  nsichneu.cwasm  nsichneu.wasm  picojpeg.cwasm  picojpeg.wasm  qrduino.cwasm  qrduino.wasm  sglib-combined.cwasm  sglib-combined.wasm  slre.cwasm  slre.wasm  st.cwasm  st.wasm  statemate.cwasm  statemate.wasm  ud.cwasm  ud.wasm  wikisort.cwasm  wikisort.wasm
results/esp32/: coremark.txt  static-size-coremark.txt  wamr-fast.txt  wamr.txt  wasmi.txt  wasmtime-no-simd.txt  wasmtime.txt
results/esp32-c6/: coremark.txt  static-size-coremark.txt  wamr-fast.txt  wamr.txt  wasmi.txt  wasmtime-no-simd.txt  wasmtime.txt
results/nrf52840dk/: coremark.txt  static-size-coremark.txt  wamr-fast.txt  wamr.txt  wasmi.txt  wasmtime-no-simd.txt  wasmtime.txt
results/pico2w/: coremark.txt  peakRAM-wamr-fast.txt  peakRAM-wamr.txt  peakRAM-wasefire.txt  peakRAM-wasm-interpreter.txt  peakRAM-wasmi.txt  peakRAM-wasmtime-no-simd.txt  peakRAM-wasmtime.txt  static-size-coremark.txt  wamr-fast.txt  wamr.txt  wasm-interpreter.txt  wasmi.txt  wasmtime-no-simd.txt  wasmtime.txt
scripts/: plot_mem_size.py  plot_ram_usage.py  plot_results.py  run_benchmarks.rs
src/: main.rs  utils.rs  wamr.rs  wasefire_interpreter.rs  wasm_interpreter.rs  wasmi.rs  wasmtime.rs
