[package]
name = "ariel-runtime-size-comparisons"
version = "0.1.0"
edition = "2024"

[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = ["alloc", "time"] }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }

# Runtimes to evaluate
wasmtime = {version = "=38.0.3",  default-features = false, features = ["runtime", "pulley"], optional = true }
wasmi = { version = "=0.51.1", default-features = false, optional = true }
wasm-interpreter = {git = "https://github.com/DLR-FT/wasm-interpreter", rev = "4ad71b14889597a0aa1c7a5e0d80c4e0e9b7e30f", default-features = false, optional = true }

libm = { version = "0.2.15", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }


[features]
wasmtime = ["dep:wasmtime"]
wasmi = ["dep:wasmi"]
wasm-interpreter = ["dep:wasm-interpreter"]
coremark = []
embench-1 = ["dep:libm"]
minimal = []