[package]
name = "ariel-runtime-size-comparisons"
version = "0.1.0"
edition = "2024"

[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = ["time", "alloc"] }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }

# Runtimes to evaluate, latest stable release as of 20th of February 2026
wasmtime = {version = "=41.0.3",  default-features = false, features = ["runtime", "pulley"], optional = true }
wasmi = { version = "=1.0.9", default-features = false, optional = true }
wasm-interpreter = {git = "https://github.com/DLR-FT/wasm-interpreter", tag="v0.1.0", default-features = false, optional = true }
wamr-rust-sdk = { path = "third_party/wamr-rust-sdk", default-features = false, optional = true }
wasefire-interpreter = {version = "0.5", default-features = false, features = ["float-types"], optional = true}

libm = { version = "0.2.16", optional = true }
tinyrlibc = {version = "*", optional = true }

ariel-os-alloc = { path  = "build/imports/ariel-os/src/ariel-os-alloc", optional = true }
critical-section = {version = "1.0", optional = true }


[target.'cfg(context = "esp")'.dependencies]
esp-alloc = { path = "third_party/esp-hal/esp-alloc" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }


[features]
coremark = []
embench-1 = ["dep:libm"]

wasmtime = ["dep:wasmtime"]
wasmi = ["dep:wasmi"]
wasm-interpreter = ["dep:wasm-interpreter"]
wamr-fast = ["wamr", "wamr-rust-sdk/fast"]
wamr = ["dep:wamr-rust-sdk", "dep:tinyrlibc"]
wasefire = ["dep:wasefire-interpreter"]

monitor-heap = ["ariel-os-alloc/expose-allocator", "dep:critical-section"]
